fix: Possibly fixed mobile zoom issue. Added normalize.css to index.css. Removed some sidebar padding when screen is too small. Changed body's min-width to 700px and removed min-height.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,6 +7,12 @@
   --timetable-stripes-public-holiday: rgba(168, 151, 124, 0.4);
 }
 
+@media (max-width: 1213px) {
+  #root {
+    padding: 2rem 0rem 0 0rem;
+  }
+}
+
 .container {
   display: grid;
   grid-template-columns: auto repeat(7, 1fr);
