--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,5 @@
+@import 'normalize.css';
+
 :root {
   font-family: Inter, system-ui, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -13,6 +15,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+@-ms-viewport{
+  width: device-width;
+}
+
 a {
   font-weight: 500;
   color: #ffffff;
@@ -26,8 +32,8 @@ body {
   margin: auto;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  min-width: 700px;
+  /* min-height: 100vh; */
 }
 
 h1 {
@@ -44,6 +50,7 @@ button {
   font-family: inherit;
   background-color: #1a1a1a91;
   cursor: pointer;
+  color: #ffffff;
   transition: border-color 0.25s;
 }
 button:hover {
